feat: add intro session.

--- a/portfolio-lobo/index.html
+++ b/portfolio-lobo/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Lobo - Desenvolvedor e Designer</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="header">
-        <img src="./img/marca.svg" alt="Lobo" />
-        <nav>
-            <ul class="header-menu">
-                <li><a href="#experiencia">Experiência</a></li>
-                <li><a href="#formacao">Formação</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </nav>
+      <img src="./img/marca.svg" alt="Lobo" />
+      <nav>
+        <ul class="header-menu">
+          <li><a href="#experiencia">Experiência</a></li>
+          <li><a href="#formacao">Formação</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </nav>
     </header>
-</body>
 
+    <main class="introducao">
+      <img src="./img/perfil.jpg" alt="Lobo Cinza" />
+      <div>
+        <h1>
+          Desenvolvedor <br />
+          Full Stack
+        </h1>
+        <p>Localizado em Campo Grande - MS</p>
+      </div>
+    </main>
+  </body>
 </html>
