feat: add experience session.

--- a/portfolio-lobo/index.html
+++ b/portfolio-lobo/index.html
@@ -19,7 +19,7 @@
       </nav>
     </header>
 
-    <main class="introducao">
+    <main class="container introducao">
       <img src="./img/perfil.jpg" alt="Lobo Cinza" />
       <div>
         <h1>
@@ -29,5 +29,71 @@
         <p>Localizado em Campo Grande - MS</p>
       </div>
     </main>
+
+    <section
+      class="container experiencia"
+      id="experiencia"
+      aria-label="Experiência"
+    >
+      <h2 class="subtitulo">Experiência</h2>
+      <div>
+        <p class="experiencia-texto">
+          Desenvolvo pequenos projetos como o Bikcraft utilizando apenas
+          <strong>HTML</strong>, <strong>CSS</strong> e
+          <strong>JavaScript</strong>. Para aplicativos web como a rede social
+          Dogs eu trabalhei no UX e UI Design do projeto.
+        </p>
+        <div class="empresa">
+          <span class="empresa-ano">2045</span>
+          <h3 class="empresa-titulo">Bikcraft</h3>
+          <span class="empresa-titulo">Desenvolvedor</span>
+          <p class="empresa-texto">
+            Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML,
+            CSS e JavaScript. Para aplicativos web como a rede social Dogs eu
+            trabalhei no UX e UI Design do projeto.
+          </p>
+          <ul class="empresa-habilidades">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>UX Design</li>
+            <li>UI Design</li>
+          </ul>
+        </div>
+        <div class="empresa">
+          <span class="empresa-ano">2044-45</span>
+          <h3 class="empresa-titulo">Surfbot</h3>
+          <span class="empresa-titulo">Estagiário</span>
+          <p class="empresa-texto">
+            Surfbot é uma empresa que oferece aulas de surf no Rio. O projeto
+            foi feito com HTML, CSS e JavaScript. Todo o projeto foi feito do
+            zero, com a intenção de colocar em prática as estruturas do CSS e do
+            JavaScript.
+          </p>
+          <ul class="empresa-habilidades">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+          </ul>
+        </div>
+        <div class="empresa">
+          <span class="empresa-ano">2044</span>
+          <h3 class="empresa-titulo">Brafé</h3>
+          <span class="empresa-titulo">Desenvolvedor</span>
+          <p class="empresa-texto">
+            Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML,
+            CSS e JavaScript. Para aplicativos web como a rede social Dogs eu
+            trabalhei no UX e UI Design do projeto.
+          </p>
+          <ul class="empresa-habilidades">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>UX Design</li>
+            <li>UI Design</li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
