--- a/portfolio-lobo/index.html
+++ b/portfolio-lobo/index.html
@@ -95,5 +95,58 @@
         </div>
       </div>
     </section>
+
+    <section class="formacao" id="formacao" aria-label="Formação">
+      <div class="formacao-container">
+        <h2 class="subtitulo">Formação</h2>
+        <div>
+          <p class="formacao-texto">
+            Minha mais recente formação acadêmica foi o
+            <strong>mestrado</strong> 🎓 que fiz no exterior em 2022. Além disso
+            me mantenho sempre atualizado com cursos intensivos online.
+          </p>
+
+          <ul class="faculdade-lista">
+            <li class="faculdade">
+              <span class="faculdade-tipo">Bacharel</span>
+              <h3 class="faculdade-curso">
+                Administração de Serviços de Informática
+              </h3>
+              <span class="faculdade-instituicao">UFMS</span>
+            </li>
+            <li class="faculdade">
+              <span class="faculdade-tipo">Tecnólogo</span>
+              <h3 class="faculdade-curso">
+                Tecnologia em Análise e Desenvolvimento de Sistemas
+              </h3>
+              <span class="faculdade-instituicao">UFMS</span>
+            </li>
+            <li class="faculdade">
+              <span class="faculdade-tipo">Mestre</span>
+              <h3 class="faculdade-curso">Administração de Empresas</h3>
+              <span class="faculdade-instituicao">UFMS</span>
+            </li>
+          </ul>
+
+          <div class="formacao-extra">
+            <div class="cursos">
+              <h3>Cursos Intensivos</h3>
+              <ul>
+                <li>UX Design & UI Design <span>56h</span></li>
+                <li>Front End para Iniciantes <span>72h</span></li>
+              </ul>
+            </div>
+
+            <div class="idiomas">
+              <h3>Idiomas</h3>
+              <ul>
+                <li>Inglês <span>/ Intermediário</span></li>
+                <li>Espanhol <span>/ Avançado</span></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
