feat: add footer.

--- a/portfolio-lobo/index.html
+++ b/portfolio-lobo/index.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Portfólio de Lobo - Desenvolvedor e Designer" /> 
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Lobo - Desenvolvedor e Designer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <title>Lobo - Desenvolvedor e Designer</title>     
   </head>
 
   <body>
     <header class="header">
-      <img src="./img/marca.svg" alt="Lobo" />
+      <img src="./img/marca.svg" alt="Lobo" width="104" height="38" />
       <nav>
         <ul class="header-menu">
           <li><a href="#experiencia">Experiência</a></li>
@@ -20,7 +24,7 @@
     </header>
 
     <main class="container introducao">
-      <img src="./img/perfil.jpg" alt="Lobo Cinza" />
+      <img src="./img/perfil.jpg" alt="Lobo Cinza" width="360" height="520" />
       <div>
         <h1>
           Desenvolvedor <br />
@@ -148,5 +152,20 @@
         </div>
       </div>
     </section>
+
+    <footer class="footer" id="contato">
+      <div class="footer-container">
+        <p class="footer-texto">
+          Estou disponível para novos projetos no momento. Entre em contato
+          comigo e marcamos uma conversa 👋
+        </p>
+        <ul class="footer-contato">
+          <li>lobo@example.com</a></li>
+          <li>+55 67 99999-9999</a></li>
+          <li><a href="/">@instagram</a></li>
+        </ul>
+        <p class="footer-copy">Lobo. Alguns direitos reservados.</p>
+      </div>
+    </footer>
   </body>
 </html>
